<resources>
    <string name="app_name">胡琪日记</string>

    <string name="diary">日记</string>
    <string name="add_diary">添加日记</string>
    <string name="calendar">日历</string>
    <string name="mine">我的</string>
    <string name="account_hint">请输入手机号</string>
    <string name="account">账号</string>
    <string name="password_hint">密码</string>
    <string name="password_confirm_hint">确认密码</string>
    <string name="register">注册</string>
    <string name="register_account">注册账号</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
</resources>
