<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background"
        android:orientation="vertical"
        tools:context=".ui.LoginActivity">

    <ImageView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:src="@drawable/login_header"
            android:adjustViewBounds="true"
            android:layout_marginTop="120dp"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="5dp">
            <ImageView android:layout_width="20dp"
                       android:layout_height="20dp"
                       android:src="@drawable/account_icon"/>
            <EditText android:id="@+id/edit_account"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@null"
                      android:layout_marginLeft="5dp"
                      android:hint="@string/account"
                      android:textSize="@dimen/input_size"
                      android:textColorHint="@color/input_hint_color"/>

        </LinearLayout>

        <TextView android:layout_width="240dp"
                  android:layout_height="1dp"
                  android:background="#fff"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp">
            <ImageView android:layout_width="20dp"
                       android:layout_height="20dp"
                       android:src="@drawable/password_icon"/>
            <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/password_hint"
                    android:textColorHint="@color/input_hint_color"
                    android:textSize="@dimen/input_size"
                    android:inputType="textPassword"/>

        </LinearLayout>

        <TextView android:layout_width="240dp"
                  android:layout_height="1dp"
                  android:background="#fff"/>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
    >
        <CheckBox
                android:id="@+id/cb_rememberPassword"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@null"
                android:background="@drawable/btn_check"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:text="记住密码"
                android:textSize="12sp"
                android:textColor="#fff"
        />
    </RelativeLayout>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_btn"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/btn_size"
            android:stateListAnimator="@null"
    />

    <RelativeLayout android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

        <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_account"
                android:background="@null"
                android:minWidth="0dp"
                android:textColor="#fff"/>

        <Button
                android:id="@+id/btn_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:background="@null"
                android:layout_alignParentRight="true"
                android:minWidth="0dp"
                android:textColor="#fff"/>

    </RelativeLayout>

</LinearLayout>