<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background"
        android:orientation="vertical"
        tools:context=".ui.RegisterActivity">

    <ImageView
            android:id="@+id/iv_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/back_icon"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="30dp"
    />

    <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/login_header"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
    />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="5dp">
            <ImageView android:layout_width="20dp"
                       android:layout_height="20dp"
                       android:src="@drawable/account_icon"/>
            <EditText   android:id="@+id/edit_account"
                    android:layout_width="match_parent"
                      android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginLeft="5dp"
                      android:textSize="@dimen/input_size"
            android:hint="@string/account_hint"
            android:textColorHint="@color/input_hint_color"/>

        </LinearLayout>

        <TextView android:layout_width="240dp"
                  android:layout_height="1dp"
                  android:background="#fff"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp">
            <ImageView android:layout_width="20dp"
                       android:layout_height="20dp"
                       android:src="@drawable/password_icon"/>
            <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@null"
                      android:layout_marginLeft="5dp"
                      android:textSize="@dimen/input_size"
                      android:hint="@string/password_hint"
                      android:textColorHint="@color/input_hint_color"/>

        </LinearLayout>

        <TextView android:layout_width="240dp"
                  android:layout_height="1dp"
                  android:background="#fff"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp">
            <ImageView android:layout_width="20dp"
                       android:layout_height="20dp"
                       android:src="@drawable/password_icon"/>
            <EditText
                    android:id="@+id/edit_confirm_password"
                    android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@null"
                      android:layout_marginLeft="5dp"
                      android:textSize="@dimen/input_size"
                      android:hint="@string/password_confirm_hint"
                      android:textColorHint="@color/input_hint_color"/>

        </LinearLayout>

        <TextView android:layout_width="240dp"
                  android:layout_height="1dp"
                  android:background="#fff"/>
    </LinearLayout>

    <Button
            android:id="@+id/btn_register"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_btn"
            android:text="@string/register"
            android:textColor="#fff"
            android:textSize="@dimen/btn_size"
            android:stateListAnimator="@null"
    />

</LinearLayout>